--- a/css/scss/homepage.scss
+++ b/css/scss/homepage.scss
@@ -59,7 +59,7 @@
     }
     .navbar-toggler {
         margin-top: 25px;
-
+        z-index: 100;
     }
 
     .fa-bars {
@@ -325,8 +325,19 @@
             display: block;
         }
 
+        #menu {
+            position: fixed;
+            top:0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            background: $brown;
+        }
+
         .home-nav {
             align-items: flex-start;
+            margin-top: 80px;
+            margin-left: 27px;
 
             .nav-item {
                 border: none !important;
@@ -342,6 +353,8 @@
         .banner {
             padding: 15px 30px;
         }
+
+
     }
 
     .design-studio {
@@ -354,8 +367,12 @@
 
 @media screen and (max-width: 955px) {
     .instagram {
-        padding-left: 15px;
-        padding-right: 15px;
+        padding: 70px 15px 100px;
+
+        > p {
+            margin-bottom: 70px;
+        }
+
         .gallery {
             justify-content: flex-start;
         }
@@ -363,6 +380,13 @@
 }
 
 @media screen and (max-width: 768px){
+    .mission {
+        .mission-content {
+            margin-right: 0;
+        }
+    }
+
+
     .design-studio {
         flex-direction: column;
 
@@ -379,6 +403,10 @@
             }
         }
     }
+
+    .core-values {
+        padding-top: 150px;
+    }
 }
 
 @media screen and (max-width: 600px) {
@@ -389,6 +417,31 @@
                 font-size: 40px;
             }
 
+        }
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .mission {
+        .mission-content {
+            min-width: 365px;
+            .content {
+                p {
+                    font-size: 15px;
+                    margin-top: 50px;
+                }
+            }
+        }
+    }
+
+
+    .core-values {
+        .core-cards {
+            .card {
+                margin: 0 7px;
+                padding: 90px 40px;
+                min-width: 340px;
+            }
         }
     }
 }
